--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     image: postgres:17
     env_file:
       - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    # volumes:
+    # - postgres_data:/var/lib/postgresql/data
 
   # adminer:
   #   image: adminer:latest
