--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@shopify/react-native-skia": "1.5.0",
+		"@zodios/core": "^10.9.6",
+		"axios": "^1.8.4",
 		"expo": "~52.0.38",
 		"expo-constants": "~17.0.8",
 		"expo-linking": "~7.0.5",
@@ -36,6 +38,7 @@
 		"@babel/core": "^7.26.10",
 		"@biomejs/biome": "1.9.4",
 		"@types/react": "~18.3.18",
+		"openapi-zod-client": "^1.18.3",
 		"typescript": "^5.8.2"
 	},
 	"private": true
