--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@shopify/react-native-skia": "1.5.0",
+		"@tanstack/react-query": "^5.71.3",
 		"@zodios/core": "^10.9.6",
 		"axios": "^1.8.4",
 		"expo": "~52.0.38",
