--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
 		"react-native-reanimated": "3.16.2",
 		"react-native-safe-area-context": "4.12.0",
 		"react-native-screens": "~4.4.0",
+		"react-native-svg": "^15.11.2",
 		"tailwindcss": "3.4.17",
 		"uuid": "^11.1.0",
 		"victory-native": "^41.16.1",
