--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
+		"@pchmn/expo-material3-theme": "^1.3.2",
 		"@shopify/react-native-skia": "1.5.0",
 		"@tanstack/react-query": "^5.71.5",
 		"@zodios/core": "^10.9.6",
