--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,37 +4,39 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@shopify/react-native-skia": "1.5.0",
-    "@tanstack/react-query": "^5.71.5",
+    "@tanstack/react-query": "^5.74.4",
     "@zodios/core": "^10.9.6",
-    "axios": "^1.8.4",
-    "expo": "~52.0.42",
+    "axios": "^1.9.0",
+    "expo": "~52.0.46",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-hook-form": "^7.55.0",
-    "react-native": "0.76.8",
+    "react-hook-form": "^7.56.1",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "2.20.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-paper": "^5.13.1",
+    "react-native-paper": "^5.13.5",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "tailwindcss": "3.4.17",
     "uuid": "^11.1.0",
-    "victory-native": "^41.16.1",
-    "zod": "^3.24.2",
+    "victory-native": "^41.17.1",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -42,7 +44,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/react": "~18.3.20",
     "openapi-zod-client": "^1.18.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
