Implement Server Name changing

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,5 @@ POSTGRES_URL=postgres # Nom del contenidor de postgres
 POSTGRES_USER=ultra-backend-user
 POSTGRES_PASSWORD= # Executar: openssl rand -hex 16
 POSTGRES_DB=ultra-backend
+
+ULTRA_BACKEND_NAME="Ultra Workouts Server"
