--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-dev-client": "~5.0.20",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "nativewind": "^4.1.23",
