--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "nativewind": "^4.1.23",
+    "node-forge": "^1.3.1",
     "react": "18.3.1",
     "react-hook-form": "^7.56.1",
     "react-native": "0.76.9",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@biomejs/biome": "1.9.4",
+    "@types/node-forge": "^1.3.11",
     "@types/react": "~18.3.20",
     "openapi-zod-client": "^1.18.3",
     "typescript": "^5.8.3"
