Use Edge-to-Edge statusbars and systembars

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -27,7 +27,16 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "react-native-edge-to-edge",
+        {
+          "android": {
+            "parentTheme": "Default",
+            "enforceNavigationBarContrast": false
+          }
+        }
+      ]
     ],
     "scheme": "ultra-workout"
   }
