--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.56.1",
     "react-native": "0.76.9",
+    "react-native-edge-to-edge": "^1.6.0",
     "react-native-gesture-handler": "2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.13.5",
