--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,6 +31,7 @@
     "react-native-edge-to-edge": "^1.6.0",
     "react-native-gesture-handler": "2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-controller": "^1.17.1",
     "react-native-paper": "^5.13.5",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
