--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@pchmn/expo-material3-theme": "^1.3.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@shopify/react-native-skia": "1.5.0",
     "@tanstack/react-query": "^5.74.4",
     "@zodios/core": "^10.9.6",
