Add OAUTH2 TOKEN config option

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,9 @@
 PORT=8002 # Port per accedir a l'API
 
 POSTGRES_URL=postgres # Nom del contenidor de postgres
-POSTGRES_USER=ultra-backend-user
-POSTGRES_PASSWORD= # Executar: openssl rand -hex 16
-POSTGRES_DB=ultra-backend
+POSTGRES_USER=ultra-backend-user # Nom d'usuari de postgres
+POSTGRES_PASSWORD= # Paraula de pas de l'usuari. Executar: openssl rand -hex 16
+POSTGRES_DB=ultra-backend # Nom de la base de dades
 
-ULTRA_BACKEND_NAME="Ultra Workouts Server"
+ULTRA_BACKEND_NAME="Ultra Workouts Server" # Nom del servidor per mostrar a la pantalla de Login
+OAUTH2_SECRET_KEY= # Clau per encriptar els tokens OAUTH2. Executar: openssl rand -hex 32
