Fix docker-compose.yml and add installer

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
-PORT=8002 # Port per accedir a l'API
+PORT=8002 # Port del host per exposar el servei
 
-POSTGRES_URL=postgres # Nom del contenidor de postgres
+POSTGRES_URL=postgres # URL de la base de dades, per defecte s'utilitza el nom del contenidor de PostgreSQL
 POSTGRES_USER=ultra-backend-user # Nom d'usuari de postgres
 POSTGRES_PASSWORD= # Paraula de pas de l'usuari. Executar: openssl rand -hex 16
 POSTGRES_DB=ultra-backend # Nom de la base de dades
