--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@zodios/core": "^10.9.6",
     "axios": "^1.9.0",
     "expo": "~52.0.46",
+    "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-linking": "~7.0.5",
