--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,14 @@
 fastapi==0.115.12
-python-multipart
-pyjwt
-bcrypt
-passlib[bcrypt]
-uvicorn
-gunicorn
-sqlmodel
-pydantic
-sqlalchemy
-psycopg[binary]
-python-decouple
-pycryptodome
-requests
+python-multipart==0.0.20
+pyjwt==2.9.0
+bcrypt==4.2.0
+passlib[bcrypt]==1.7.4
+uvicorn==0.34.0
+gunicorn==23.0.0
+sqlmodel==0.0.24
+pydantic==2.11.2
+sqlalchemy==2.0.42
+psycopg[binary]==3.2.4
+python-decouple==3.8
+pycryptodome==3.23.0
+requests==2.31.0
